@@ -1,5 +1,5 @@
 Name: instrument-control
-Version: 0.4.0
+Version: 0.4.0+
 Date: 2019-02-24
 Author: Andrius Sutas <andrius.sutas@gmail.com>, Stefan Mahr <dac922@gmx.de>, John Donoghue <john.donoghue@ieee.org>
 Maintainer: Stefan Mahr <dac922@gmx.de>, John Donoghue <john.donoghue@ieee.org>
